--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 body{
     background-color: blanchedalmond;
 }
+
+.section1 {
+    height: 600px;
+}
+.section2 {
+    height: 600px;
+}
+.section3 {
+    height: 600px;
+}
+.section4 {
+    height: 600px;
+}
